<resources>
    <string name="app_name">BooksApp</string>
    <string name="page_main">Главная</string>
    <string name="page_profile">Мои книги</string>
    <string name="search">Поиск</string>
    <string name="empty" />
    <string name="title_books">Новинки</string>
    <string name="title_periodic">Периодика</string>
    <string name="title_reviews">Свежие отзывы</string>
    <string name="library_all">Все библиотеки</string>
    <string name="book_request_title">Данная книга не найдена в библиотеках</string>
    <string name="book_request_message">Хотите отправить запрос на добавление книги в фонды?</string>
    <string name="request_book">Заказать книгу</string>
    <string name="book_author">Автор книги (необязательно)</string>
    <string name="book_isbn">ISBN (необязательно)</string>
    <string name="book_link">Ссылка на книгу (необязательно)</string>
    <string name="book_rent">Зарезервировать</string>
    <string name="library_available">Наличие в библиотеках</string>
    <string name="favorite_books">Избранные книги</string>
    <string name="books_in_rent">Книги на руках</string>
    <string name="user_reviews">Отзывы</string>
    <string name="booK_request_fail">Извините, у нас что-то сломалось. Попробуйте запросить книгу еще раз.</string>
</resources>
