<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:text="@string/book_request_title"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:text="@string/book_request_message"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1" />

            <EditText
                android:id="@+id/etBookTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_round_grey_4dp"
                android:gravity="center"
                android:padding="8dp" />

            <EditText
                android:id="@+id/etBookAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_round_grey_4dp"
                android:gravity="center"
                android:hint="@string/book_author"
                android:padding="8dp" />

            <EditText
                android:id="@+id/etBookISBN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_round_grey_4dp"
                android:gravity="center"
                android:hint="@string/book_isbn"
                android:padding="8dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_round_grey_4dp"
                android:gravity="center"
                android:hint="@string/book_link"
                android:padding="8dp" />

            <TextView
                android:id="@+id/tvBookRequest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/request_book"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/white" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvBookSuggest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                tools:listitem="@layout/view_book_suggest" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>